# traylingo

./: .gitignore  .tool-versions  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PRIVACY.md  README.md  ROADMAP.md  SECURITY.md  TODO.md  biome.json  index.html  knip.json  lefthook.yml  mise.toml  package.json  pnpm-lock.yaml  release-please-config.json  vite.config.ts
.claude/commands/: fix-issue.md  release.md  resolve-conflicts.md
.github/: CODEOWNERS  FUNDING.yml  pull_request_template.md  renovate.json
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  pr-rules.yml  release-please.yml  release.yml  update-homebrew.yml
.serena/memories/: code_style_conventions.md  codebase_structure.md  project_overview.md  suggested_commands.md  task_completion_checklist.md
docs/: NEXT_SESSION.md  architecture.md  auto-updater.md  concepts.md  error-management.md  icon-design.md  input-sanitization.md  legal-investigation.md  logging.md  naming.md  quick-popup-implementation.md  thema.md
scripts/: check-licenses.mjs
src/: App.tsx  index.css  index.tsx
src-tauri/: Cargo.toml  deny.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: anthropic.rs  error.rs  keychain.rs  lib.rs  main.rs  openai.rs  settings.rs
src/components/: ErrorDisplay.tsx  PopupView.tsx  Settings.tsx
src/types/: error.ts  logging.ts
src/utils/: formatText.test.ts  formatText.ts  logger.ts
